--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Write an awesome description for your new site here. You can edit 
 
 authors:
   - name: Aylin B. Yildirim Tschoepe
-    title: Chief Academic Officer, Doctor of Design
+    title: Chief Academic Officer
     email: aylin.yt@gmail.com
     link: Aylin
   - name: Luis Alberto Barradas Chacón
@@ -13,7 +13,7 @@ authors:
     email: abcsds@gmail.com
     link: Alberto
   - name: Dominic Tschoepe
-    title: Chief Creative Officer, Architect, Photographer
+    title: Chief Creative Officer
     email: dominic.tschoepe@gmail.com
     link: Dominic
 
