--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@ description: "Write an awesome description for your new site here. You can edit 
 
 authors:
   - name: Aylin B. Yildirim Tschoepe
-    title: Chief Academic Officer
+    title: CEO, Dr. of Design, Urban Studies/Anthropology
     email: aylin.yt@gmail.com
     link: Aylin
   - name: Luis Alberto Barradas Chacón
-    title: Chief Information Officer
+    title: CIO, Fullstack Developer
     email: abcsds@gmail.com
     link: Alberto
   - name: Dominic Tschoepe
-    title: Chief Creative Officer
+    title: CCO, Architect and Photographer
     email: dominic.tschoepe@gmail.com
     link: Dominic
 
