--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,13 @@ authors:
     email: dominic.tschoepe@gmail.com
     link: Dominic
 
+sponsors:
+  - name: Manzara Istanbul
+    link: http://www.manzara-apartments.com/
+  - name: Center for Middle Eastern Studies, Harvard University
+    link: http://cmes.fas.harvard.edu/
+  - name: Laboratory of Entrepreneurship and Transformation, Tecnológico de Monterrey
+    link: http://let-emprendimientopublico.mx/en/
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
